--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,51 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.Page {
+  background-color: #ffff;
+}
+
+.Header {
+  text-align: center; 
+  color:#2b6777;
+  background-color: white;
+}
+
+.TopicList {
+  text-indent: 45%;
+}
+
+.Topic {
+  color: #52ab98;
+  margin: auto;
+  padding: 5px;
+  font-size:medium;
+}
+
+.FilterButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  margin: 10px auto;
+}
+
+.ArticleList {
+  
+  width: 80%;
+  margin: auto;
+  padding: 20px;
+}
+
+.Article {
+  background-color: #f2f2f2;
+  padding: 10px;
+  list-style: none;
+  border: #f2f2f2 solid 2px;
+  margin: 10px;
+  text-align: center;
+  color: #2b6777;
+  font:message-box
 }
