this commit ivolves navigation from article to its comment page; addComment and voting  functionality not added

--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@
   padding: 20px;
 }
 
-.Article {
+.ArticleCard {
   background-color: #f2f2f2;
   padding: 10px;
   list-style: none;
@@ -84,7 +84,7 @@
   
 }
 
-.Article:hover {
+.ArticleCard:hover {
   background-color: #79cdbb;
 }
 
@@ -113,6 +113,7 @@
   text-align: center;
 }
 
+
 .VoteSection {
   display: flex;
   justify-content: center;
@@ -135,4 +136,51 @@
   width: 50px;
   height: 50px;
   margin: 5px;
+}
+
+.CommentList {
+  padding: 15px 15px;
+  
+}
+
+.CommentDetails{
+  list-style: none;
+  padding: 10px 10px;
+  border:#52ab98 solid 2px;
+  margin: 10px 10px;
+}
+
+.CommentBody {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+.CommentVotes {
+  text-align: center;
+}
+
+.AddComment {
+  border:#2b6777 solid 2px;
+  padding: 10px 10px;
+  width: 60%;
+  display: block;
+  margin: 10px auto;
+}
+
+.AddCommentInput {
+  width: 80%;
+  height: 100px;
+  margin: 10px auto;
+  display: block;
+  
+  word-wrap: break-word;
+  
+  
+}
+
+.PostButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 }
