--- a/src/App.css
+++ b/src/App.css
@@ -52,14 +52,27 @@
 }
 
 .TopicList {
-  text-indent: 45%;
+ 
+  background-color: #4d8ea0;
+  list-style: none;
+  margin: 10px auto;
+  text-align: center;
+  
 }
 
 .Topic {
-  color: #52ab98;
+  color: #f1f6f4;
+  font-weight: 400;
   margin: auto;
   padding: 5px;
   font-size:medium;
+  display:inline-block;
+  padding: 10px 10px;
+
+}
+
+.Topic:hover {
+  background-color: #79cdbb;
 }
 
 .FilterButton {
@@ -72,7 +85,7 @@
 
 .ArticleList {
   
-  width: 80%;
+  width: 90%;
   margin: auto;
   padding: 20px;
 }
@@ -166,14 +179,15 @@
 .AddComment {
   border:#2b6777 solid 2px;
   padding: 10px 10px;
-  width: 60%;
+  width: 70%;
   display: block;
   margin: 10px auto;
+  
 }
 
 .AddCommentInput {
   width: 80%;
-  height: 100px;
+  height: 80px;
   margin: 10px auto;
   display: block;
   
@@ -188,3 +202,4 @@
   align-items: center;
   margin: auto;
 }
+
